# LigandMPNN

./: .gitignore  README.md  pyproject.toml
ligandmpnn/: sc_utils.py
ligandmpnn/openfold/data/: data_modules.py  data_pipeline.py  data_transforms.py  feature_pipeline.py  input_pipeline.py  mmcif_parsing.py  templates.py
ligandmpnn/openfold/data/tools/: hhblits.py  hhsearch.py  jackhmmer.py  kalign.py
ligandmpnn/openfold/np/: protein.py  residue_constants.py
ligandmpnn/openfold/np/relax/: amber_minimize.py  relax.py  utils.py
ligandmpnn/openfold/utils/: feats.py  loss.py
ligandmpnn/scripts/: __init__.py  get_params.py  run.py  score.py
scripts/: run.py
